--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <name>movie-rental Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
-
     <properties>
         <servlet.version>3.0.1</servlet.version>
         <spring.version>4.3.10.RELEASE</spring.version>
@@ -129,5 +128,16 @@
     </dependencies>
     <build>
         <finalName>movie-rental</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
