--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,14 +34,14 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <!--<filter>
+    <filter>
         <filter-name>AuthFilter</filter-name>
         <filter-class>com.hand.movie.filter.AuthFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>AuthFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
 
     <!--强制UTF-8编码-->
     <filter>
