--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <servlet.version>3.0.1</servlet.version>
         <spring.version>4.3.10.RELEASE</spring.version>
         <servlet.version>3.1.0</servlet.version>
@@ -135,8 +136,22 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.3</version>
                 <configuration>
+                    <encoding>UTF-8</encoding>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.4.v20170414</version>
+                <configuration>
+                    <httpConnector>
+                        <port>8181</port>
+                    </httpConnector>
+                    <webApp>
+                        <contextPath>/movie</contextPath>
+                    </webApp>
                 </configuration>
             </plugin>
         </plugins>
